--- a/src/index.scss
+++ b/src/index.scss
@@ -19,3 +19,11 @@ h3 {
 * {
   box-sizing: border-box;
 }
+
+.icon {
+  width: 1em;
+  height: 1em;
+  vertical-align: -0.15em;
+  fill: currentColor;
+  overflow: hidden;
+}
